--- a/domains/auth/Auth.API/API/Properties/launchSettings.json
+++ b/domains/auth/Auth.API/API/Properties/launchSettings.json
@@ -17,7 +17,7 @@
       "applicationUrl": "https://localhost:7231;http://localhost:5231",
         "environmentVariables": {
             "ASPNETCORE_ENVIRONMENT": "Development",
-            "TERMS_MARKDOWN_FOLDER": "A/beautiful/dir",
+            "TermsMarkdownFolder": "A/beautiful/dir",
             "InternalTokenSecret": "INTERNALTOKENSECRET",
             "TokenExpiryTime": "1",
             "Scope": "SCOPE, SCOPE1",
