--- a/domains/auth/Auth.API/API/Properties/launchSettings.json
+++ b/domains/auth/Auth.API/API/Properties/launchSettings.json
@@ -1,48 +1,50 @@
 {
-  "$schema": "https://json.schemastore.org/launchsettings.json",
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:64839",
-      "sslPort": 44305
-    }
-  },
-  "profiles": {
-    "API": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7231;http://localhost:5231",
-        "environmentVariables": {
-            "ASPNETCORE_ENVIRONMENT": "Development",
-            "TermsMarkdownFolder": "A/beautiful/dir",
-            "InternalTokenSecret": "INTERNALTOKENSECRET",
-            "TokenExpiryTime": "1",
-            "Scope": "SCOPE, SCOPE1",
-            "AmrValues": "AMRVALUES",
-            "OidcUrl": "https://pp.netseidbroker.dk/op",
-            "OidcClientId": "OIDCCLIENTID",
-            "OidcClientSecret": "OIDCCLIENTSECRET",
-            "BaseUrl": "BASEURL",
-            "SecretKey": "mysmallkey123456",
-            "CookieName": "Authorization",
-            "CookiePath": "/",
-            "CookieDomain": "localhost",
-            "CookieHttpOnly": "true",
-            "CookieSameSite": "Strict",
-            "CookieSecure": "true",
-            "CookieExpiresTimeDelta": "6"
+    "$schema": "https://json.schemastore.org/launchsettings.json",
+    "iisSettings": {
+        "windowsAuthentication": false,
+        "anonymousAuthentication": true,
+        "iisExpress": {
+            "applicationUrl": "http://localhost:64839",
+            "sslPort": 44305
         }
     },
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+    "profiles": {
+        "API": {
+            "commandName": "Project",
+            "dotnetRunMessages": true,
+            "launchBrowser": true,
+            "launchUrl": "swagger",
+            "applicationUrl": "https://localhost:7231;http://localhost:5231",
+            "environmentVariables": {
+                "ASPNETCORE_ENVIRONMENT": "Development",
+                "TermsMarkdownFolder": "A/beautiful/dir",
+                "InternalTokenSecret": "INTERNALTOKENSECRET",
+                "TokenExpiryTime": "1",
+                "AmrValues": "AMRVALUES",
+                "OidcUrl": "https://pp.netseidbroker.dk/op",
+                "OidcClientId": "OIDCCLIENTID",
+                "OidcClientSecret": "OIDCCLIENTSECRET",
+                "BaseUrl": "BASEURL",
+                "ServiceUrl": "https://localhost/api/auth",
+                "OidcLoginCallbackPath": "/auth/oidc/login/callback",
+                "IdTokenSecretKey": "mysmallkey123456",
+                "StateSecretKey": "mysmallkey123456",
+                "CookieName": "Authorization",
+                "CookiePath": "/",
+                "CookieDomain": "localhost",
+                "CookieHttpOnly": "true",
+                "CookieSameSite": "Strict",
+                "CookieSecure": "true",
+                "CookieExpiresTimeDelta": "6"
+            }
+        },
+        "IIS Express": {
+            "commandName": "IISExpress",
+            "launchBrowser": true,
+            "launchUrl": "swagger",
+            "environmentVariables": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            }
+        }
     }
-  }
 }
