--- a/.github/workflows/snyk-test.yaml
+++ b/.github/workflows/snyk-test.yaml
@@ -18,13 +18,21 @@ jobs:
         working-directory: domains/emissions/Emissions.API/
         run: dotnet restore
 
+      - name: test
+        uses: snyk/actions/dotnet@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN_TMP }}
+        with:
+          command: test
+          args: "--project-name=Emissions --file=domains/emissions/Emissions.API/Emissions.API.sln"
+
       - name: monitor
         uses: snyk/actions/dotnet@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN_TMP }}
         with:
           command: monitor
-          args: "--file=domains/emissions/Emissions.API/Emissions.API.sln --project-name=Emissions"
+          args: "--project-name=Emissions --file=domains/emissions/Emissions.API/Emissions.API.sln"
 
       - name: code test
         uses: snyk/actions/dotnet@master
