--- a/.github/actions/update-base-environment/action.yaml
+++ b/.github/actions/update-base-environment/action.yaml
@@ -65,6 +65,7 @@ runs:
         value: ${{ inputs.chart_version }}
 
     - name: Branch - commit changes
+      id: commit
       uses: EndBug/add-and-commit@v9
       with:
         add: ${{ steps.simple-app.outputs.base-file }}
@@ -73,3 +74,10 @@ runs:
         push: --force --set-upstream origin ${{ inputs.env_branch }}
         default_author: github_actions
         cwd: base
+
+    - name: Verify changes were pushed
+      shell: bash
+      if: ${{ steps.commit.outputs.pushed }} == 'false'
+      run: |
+        echo "::error::Nothing was committed or pushed"
+        exit 1
