--- a/.github/workflows/build-domain.yaml
+++ b/.github/workflows/build-domain.yaml
@@ -1,5 +1,5 @@
 name: Build domain
-
+#FIXME: concurrency flag?
 on:
   pull_request:
     branches:
@@ -190,6 +190,7 @@ jobs:
       - build-projects
     if: ${{ needs.setup.outputs.domains != '[]' }}
     strategy:
+      max-parallel: 1
       matrix:
         build: ${{ fromJson(needs.setup.outputs.domains) }}
     steps:
@@ -240,73 +241,13 @@ jobs:
           chart_folder: ${{ steps.resolve-paths.outputs.chart }}
           chart_version: ${{ steps.resolve-chart.outputs.semver }}
           include_image_name: true
-
-  update-indices:
-    runs-on: ubuntu-latest
-    needs:
-      - setup
-      - build-chart
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Checkout chart repository
-        uses: actions/checkout@v3
-        with:
-          path: helm-charts
-          repository: ${{ github.repository_owner }}/helm-charts
-          ssh-key: ${{ secrets.DEPLOY_KEY_HELM_CHARTS }}
-          ref: gh-pages
-
-      - name: Download chart tarball
-        id: download
-        shell: bash
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-          REPO: ${{ github.repository }}
-          PR: ${{ github.event.pull_request.number }}
-          DOMAINS: ${{ needs.setup.outputs.domains }}
-        run: |
-          set -e
-          changes=$(printf '%s' "$DOMAINS" | jq -r '.[]' | while read domain; do
-            name=$(grep ^"name: " "$domain/chart/Chart.yaml" | cut -f2 -d' ')
-            version=$(grep ^"version: " "$domain/chart/Chart.yaml" | cut -f2 -d' ')
-            version=$(sh .github/tooling/semver.sh "$version" "$PR")
-
-            gh release download "$name-$version" --repo '$REPO' --pattern "*.tgz" --dir './helm-charts/'
-            printf '"%s"\n' "$name-$version.tgz"
-          done | jq -sc '. + ["index.yaml"]')
-          files=$(echo "$changes" | jq 'map(select(. != "index.yaml")) | join(", ")')
-
-          echo "changes=${changes}" >> $GITHUB_OUTPUT
-          echo "files=${files}" >> $GITHUB_OUTPUT
-
-      - name: Update index file for helm registry
-        shell: bash
-        run: cd helm-charts && helm repo index .
-
-      - name: Commit changes
-        id: commit
-        uses: EndBug/add-and-commit@v9
-        with:
-          add: "'${{ steps.download.outputs.changes }}'"
-          message: "Updated the helm registry with files: ${{ steps.download.outputs.files }}"
-          push: --force
-          new_branch: gh-pages
-          default_author: github_actions
-          cwd: helm-charts
-
-      - name: Verify changes were pushed
-        shell: bash
-        if: ${{ steps.commit.outputs.pushed }} == 'false'
-        run: |
-          echo "::error::Nothing was committed or pushed"
-          exit 1
+          deploy_key: ${{ secrets.DEPLOY_KEY_HELM_CHARTS }}
 
   update-environment:
     runs-on: ubuntu-latest
     needs:
       - setup
-      - update-indices
+      - build-chart
     strategy:
       max-parallel: 1
       matrix:
