--- a/domains/emissions/Emissions.API/API/Dockerfile
+++ b/domains/emissions/Emissions.API/API/Dockerfile
@@ -1,9 +1,9 @@
-FROM mcr.microsoft.com/dotnet/aspnet:6.0.7 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:7.0-alpine AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
-FROM mcr.microsoft.com/dotnet/sdk:6.0.302 AS build
+FROM mcr.microsoft.com/dotnet/sdk:7.0-alpine AS build
 WORKDIR /src
 COPY ["Emissions.API/API/API.csproj", "Emissions.API/API/"]
 RUN dotnet restore "Emissions.API/API/API.csproj"
@@ -15,7 +15,10 @@ FROM build AS publish
 RUN dotnet publish "API.csproj" -c Release -o /app/publish
 
 FROM base AS final
+
+RUN apk add --no-cache tzdata
+
 WORKDIR /app
 COPY --from=publish /app/publish .
-HEALTHCHECK CMD curl --fail http://localhost:5000/health || exit 1
+HEALTHCHECK CMD wget -qO- http://localhost:80/healthz > /dev/null || exit 1
 ENTRYPOINT ["dotnet", "API.dll"]
