--- a/domains/auth/docker-environment/prometheus.yaml
+++ b/domains/auth/docker-environment/prometheus.yaml
@@ -1,6 +1,9 @@
+global:
+  scrape_interval: 1s
+  evaluation_interval: 1s
+
 scrape_configs:
 - job_name: 'otel-collector'
-  scrape_interval: 10s
   static_configs:
   - targets: ['otel-collector:8889']
   - targets: ['otel-collector:8888']
