--- a/domains/auth/docker-environment/prometheus.yaml
+++ b/domains/auth/docker-environment/prometheus.yaml
@@ -3,7 +3,13 @@ global:
   evaluation_interval: 1s
 
 scrape_configs:
-- job_name: 'otel-collector'
-  static_configs:
-  - targets: ['otel-collector:8889']
-  - targets: ['otel-collector:8888']
+  - job_name: "Auth.Metrics"
+    scheme: https
+    tls_config:
+      insecure_skip_verify: true
+    static_configs:
+    - targets: ["host.docker.internal:7297"]
+    
+  - job_name: "Prometheus"
+    static_configs:
+    - targets: [localhost:9090]
