--- a/domains/certificates/Shared/AggregateRepositories/AggregateRepositories.csproj
+++ b/domains/certificates/Shared/AggregateRepositories/AggregateRepositories.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Marten" Version="5.11.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CertificateEvents\CertificateEvents.csproj" />
   </ItemGroup>
 
 </Project>
