--- a/.github/actions/yaml-check-incremented-version/action.yaml
+++ b/.github/actions/yaml-check-incremented-version/action.yaml
@@ -20,52 +20,57 @@ runs:
   using: composite
 
   steps:
-    - name: Checkout main to get latest tag
+    - name: Checkout main
       uses: actions/checkout@v3
       with:
         ref: main
         fetch-depth: 0
 
-    - name: Get Previous tag
+    - name: Get previous tag
       id: previous-tag
-      uses: ./.github/actions/yaml-get
-      with:
-        yaml_file: ${{ inputs.base-yaml-file || inputs.yaml-file }}
-        yaml_path: ${{ inputs.base-yaml-path || inputs.yaml-path }}
+      shell: bash
+      run: echo "result=$(yq '.${{ inputs.base-yaml-path || inputs.yaml-path }}' '${{ inputs.base-yaml-file || inputs.yaml-file }}')" >> $GITHUB_OUTPUT
 
-    - name: Check if previous tag is valid semver
-      id: is-prev-tag-valid
-      uses: rubenesp87/semver-validation-action@cd30707b188980006854de19df716fc9cf39f37f
-      continue-on-error: true # Accept old versions to be invalid since new versions are checked they are valid
-      with:
-        version: ${{ steps.previous-tag.outputs.result }}
+    - name: Verify previous tag
+      shell: bash
+      run: |
+        echo '${{ steps.previous-tag.outputs.result }}' | grep -qEe '^[0-9]+\.[0-9]+\.[0-9]+(-[^-]+-[^-]+)?$'
+        [ $? -eq 0 ] || { echo '::notice::Invalid version on main - accepting old versions to be invalid since new versions are checked for validity'; }
 
-    - name: Get next valid semvers
-      id: semvers
-      if: steps.is-prev-tag-valid.outcome == 'success'
-      uses: "WyriHaximus/github-action-next-semvers@v1"
-      with:
-        version: ${{ steps.previous-tag.outputs.result }}
-
-    - uses: actions/checkout@v3
+    - name: Checkout branch
+      uses: actions/checkout@v3
       with:
         ref: ${{ github.head_ref }}
 
     - name: Get current tag
       id: current-tag
-      uses: ./.github/actions/yaml-get
-      with:
-        yaml_file: ${{ inputs.yaml-file }}
-        yaml_path: ${{ inputs.yaml-path }}
+      shell: bash
+      run: echo "result=$(yq '.${{ inputs.yaml-path }}' '${{ inputs.yaml-file }}')" >> $GITHUB_OUTPUT
 
-    - name: Check if current tag is valid semver
-      uses: rubenesp87/semver-validation-action@cd30707b188980006854de19df716fc9cf39f37f
-      with:
-        version: ${{ steps.current-tag.outputs.result }}
-
-    - name: Check versions
-      if: ${{ steps.is-prev-tag-valid.outcome == 'success' && steps.current-tag.outputs.result != steps.semvers.outputs.patch && steps.current-tag.outputs.result != steps.semvers.outputs.minor && steps.current-tag.outputs.result != steps.semvers.outputs.major }}
+    - name: Verify current tag
       shell: bash
       run: |
-        echo "The version ${{ steps.current-tag.outputs.result }} must be an increment of the current version on main ${{ steps.previous-tag.outputs.result }}."
-        exit 1
+        echo '${{ steps.current-tag.outputs.result }}' | grep -qEe '^[0-9]+\.[0-9]+\.[0-9]+(-[^-]+-[^-]+)?$'
+        [ $? -eq 0 ] || { echo '::warning::Invalid version'; exit 1; }
+
+    - name: Verify incremented version
+      if: ${{ steps.is-prev-tag-valid.outcome == 'success' }}
+      shell: bash
+      env:
+        previous: ${{ steps.previous-tag.outputs.result }}
+        current: ${{ steps.current-tag.outputs.result }}
+      run: |
+        echo '::group::Resolved versions'
+        printf '%s - previous version\n%s - current version\n' "$previous" "$current"
+        echo '::endgroup::'
+
+        [ "$previous" = "$current" ] && {
+          echo '::error::Version must be different.'
+          exit 1
+        }
+
+        verify=$(printf '%s\n%s' "$previous" "$current" | sort -t '.' -k 1,1 -k 2,2 -k 3,3 -k 4,4 -k 5,5 -g | tail -n1)
+        [ "$previous" = "$verify" ] && {
+          echo '::error::The version ${current} must be an increment of the current version on main ${previous}.'
+          exit 1
+        }
