--- a/.github/actions/yaml-check-incremented-version/action.yaml
+++ b/.github/actions/yaml-check-incremented-version/action.yaml
@@ -34,6 +34,8 @@ runs:
         echo "result=$version" >> $GITHUB_OUTPUT
 
     - name: Verify previous tag
+      if: ${{ steps.previous-tag.outputs.result != null }}
+      id: is-previous-tag-valid
       shell: bash
       run: |
         echo '${{ steps.previous-tag.outputs.result }}' | grep -qEe '^[0-9]+\.[0-9]+\.[0-9]+(-[^-]+-[^-]+)?$'
@@ -61,6 +63,7 @@ runs:
         [ $? -eq 0 ] || { echo '::warning::Invalid version'; exit 1; }
 
     - name: Verify incremented version
+      if: ${{ steps.is-previous-tag-valid.outcome == 'success' }}
       shell: bash
       env:
         previous: ${{ steps.previous-tag.outputs.result }}
