--- a/.github/actions/yaml-check-incremented-version/action.yaml
+++ b/.github/actions/yaml-check-incremented-version/action.yaml
@@ -26,6 +26,7 @@ runs:
       env:
         GH_TOKEN: ${{ github.token }}
       run: |
+        echo "result=not-set" >> $GITHUB_OUTPUT
         gh api repos/${{ github.repository }}/contents/${{ inputs.base-yaml-file || inputs.yaml-file }}?ref=main > main || exit 0
         jq -r '.download_url' main > url || exit 0
         cat url | xargs curl --silent > raw || exit 0
@@ -34,7 +35,7 @@ runs:
         echo "result=$version" >> $GITHUB_OUTPUT
 
     - name: Verify previous tag
-      if: ${{ steps.previous-tag.outputs.result != null }}
+      if: ${{ steps.previous-tag.outputs.result != 'not-set' }}
       id: is-previous-tag-valid
       shell: bash
       run: |
